tests/e2e/semantics/assignment_object_index_invalid2.error
Error: syntax error in story at line 2, column 1

2|    a.foo = 100
      ^^^^^

E0131: `Map[string,Map[string,int]]` can't be dot-accessed with `foo` of type `string`
